# Interactive-Agentic-Book

./: .env.example  .gitignore  .prettierignore  404.html  BACKEND_INTEGRATION_COMPLETE.md  BACKEND_RENDER_DEPLOYMENT_CHECKLIST.md  CH3_VALIDATION.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_URLS_EXPLAINED.md  DOCUMENTATION.md  DOCUMENTATION6.md  GITHUB_PAGES_RENDER_BACKEND_SETUP.md  HACKATHON_IMPLEMENTATION_SUMMARY.md  HACKATHON_PROGRESS_ANALYSIS.md  IMPLEMENT.md  LICENSE  LOCAL_TESTING_GUIDE.md  LOCAL_TESTING_QUICK_START.md  LOCAL_TESTING_WINDOWS_FIX.md  QUICK-DEPLOY.md  QUICK_START_DEPLOYMENT.md  README.md  RELEASE_PACKAGE.md  RELEASE_TAG_INSTRUCTIONS.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_DEPLOYMENT_STEPS.md  RENDER_ENVIRONMENT_VARIABLES_GUIDE.md  RENDER_FULL_STACK_DEPLOYMENT.md  START-SERVERS.md  TASKS.md  docusaurus.config.ts  ersLeointeractive-agentic-book  index.html  intro.html  markdown-page.html  package-lock.json  package.json  redirect.html  render.yaml  (+5 more)
backend/: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: placeholder_chapter_agent.py
backend/app/ai/: __init__.py
backend/app/analytics/: __init__.py  analytics_models.py  event_logger.py  telemetry_router.py
backend/app/api/: ai_blocks.py  auth.py  chapters.py  chat.py  diagram_generation.py  (+10 more)
backend/scripts/: ingest.py
backend/tests/: test_chapter1_endpoints.py  test_chapter_1_validation.py  test_chapter_2_runtime.py
backend/validators/: __init__.py  chapter_metadata_validator.py  rag_readiness_validator.py
(+1575 files in other folders)
